k8s/pvc/svc-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-pvc
  labels:
    app: test-app-pvc
spec:
  type: ClusterIP
  selector:
    app: test-app-pvc
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
