k8s/pvc/ingress-pvc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: app-ingress-pvc
  namespace: oleg
spec:
  rules:
  - host: fortune-oleg-pvc.kubelab.spainip.es
    http:
      paths:
      - backend:
          service:
            name: test-service-pvc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - fortune-oleg-pvc.kubelab.spainip.es
    secretName: tls-app-ingress-pvc-ingress
